cloud/backend/patient-management/manifests/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-patient-management
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: patient-management.al.polytech.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  patient-management
                port:
                  number: 8080
  tls:
    - hosts:
        - patient-management.al.polytech.apoorva64.com
      secretName: patient-management.al.polytech.apoorva64-tls
